--- a/attendance_mission1/attendance_mission1/attendance_mission1.vcxproj.filters
+++ b/attendance_mission1/attendance_mission1/attendance_mission1.vcxproj.filters
@@ -26,5 +26,6 @@
     <Text Include="attendance_weekday_500.txt">
       <Filter>Data</Filter>
     </Text>
+    <Text Include="attendance_umar.txt" />
   </ItemGroup>
 </Project>
